bootstrap/modify-css/modify.css
/* Media Quries*/
@media (max-width: 576px) 
{  
	.badge-fix
	{
		white-space: normal;
		font-size: .8em;
	}

	.h1
	{
		word-wrap: break-word;
		-webkit-hyphens: auto;
		-moz-hyphens: auto;
		-ms-hyphens: auto;
		-o-hyphens: auto;
		hyphens: auto;
	}
}

/* Remove the navbar's default margin-bottom and rounded borders */ 
.navbar {
	margin-bottom: 0;
	border-radius: 0;
}
			
/* Set height of the grid so .sidenav can be 100% (adjust as needed) */
.row.content {height: 450px}
		
/* Set gray background color and 100% height */
.sidenav {
	padding-top: 20px;
	background-color: #f1f1f1;
	height: 100%;
}
			
/* Set black background color, white text and some padding */
footer {
	background-color: #555;
	color: white;
	padding: 15px;
}
			
/* On small screens, set height to 'auto' for sidenav and grid */
.jumbotron {

	background-image: url("../../images/bgheader01.jpg");
	background-size: cover;      
}

.jumbotron p{
	color: black;
}

.jumbotron .label
{
	color:red;
}

h2, h3{
	margin: 0px 0px 20px 0px;
}

.card-img-top{
	height: 15vh;
	object-fit: fit;
	margin-top: 20px;
}

.card-svg-bot{
	height: 5vh;
	object-fit: fit;
}

.card-body{
	padding: 0;
	margin: 0;
}

.card-body p{
	padding: 10px;
}

.myauto{
	margin-top: auto;
	margin-bottom: auto;
}

